# svoy

./: .gitignore  Cargo.toml  README.md  install.sh  svoy.desktop
packaging/: PKGBUILD
src/: main.rs  share_logic.rs
