[package]
name = "svoy"
version = "0.1.0"
edition = "2021"
description = "A fast, simple image viewer"
authors = ["xi7-67"]

[dependencies]
eframe = "0.30"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
egui_extras = { version = "0.30", features = ["image", "svg"] }
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
